--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,15 @@
 # Site settings
-title: Xs-Huxblog
-SEOTitle: Xs-HuxBlog
-header-img: img/bg/bg_index.jpg
-email: jsksxs360@163.com
-description: ""
+title: Tsinghua High-z Team
+SEOTitle: Tsinghua High-z Team
+header-img: img/bg/bg_cluster.jpg
+email: 
+description: "This is the website for high-z galaxy team at THU"
 keyword: ""
-url: "https://jsksxs360.github.io"              # your host, for absolute URL
-baseurl: "/xs-huxblog"                             # for example, '/blog' if your blog hosted on 'host/blog'
+url: "https://tsinghuahighzteam.github.io"              # your host, for absolute URL
+
 
 # SNS settings
-douban_username: 138483825
-weibo_username: jsksxs360
-zhihu_username: jsksxs360
-github_username: jsksxs360
+github_username: TsinghuaHighzTeam
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
@@ -33,34 +30,20 @@ markdown: kramdown
 kramdown:
   input: GFM                            # use Github Flavored Markdown !important
 
-# Baidu Share
-bd_share: true                          # whether or not using baidu share
-
-# Livere
-labili: false                           # whether or not using Livere
-labili_uid: MTAyMC80MjI1Ny8xODgwNA==    # data uid
-
-# Analytics settings
-# Baidu Analytics
-ba_track_id: 07529a93af5fa9f808261a1318c3aba4
-
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "专注IT，乐于分享。"
-sidebar-avatar: /xs-huxblog/img/avatar-xs.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Tsinghua High-z Team in Department of Astronomy Tsinghua University"
+sidebar-avatar:       # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true                     # whether or not using Feature-Tags
 featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
 
 # Friends
-friends: [
-    {
-        title: "Hux Blog",
-        href: "http://huangxuan.me"
-    },
-    {
-        title: "Xs blog",
-        href: "http://xiaosheng.me"
-    }
-]
+
+
+
+
+
+
+
