--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,12 @@ kramdown:
   input: GFM                            # use Github Flavored Markdown !important
 
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
+sidebar: false                           # whether or not using Sidebar.
 sidebar-about-description: "Tsinghua High-z Team in Department of Astronomy Tsinghua University"
 sidebar-avatar:       # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
-featured-tags: true                     # whether or not using Feature-Tags
+featured-tags: false                     # whether or not using Feature-Tags
 featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
 
 # Friends
